# wisp

./: .env.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SETUP.md  build.rs  day-0-design-doc.md  docker-compose.prod.yml  docker-compose.yml
.claude/commands/: deploy.md
.github/workflows/: build.yml
docs/: TODO.md  cwa-api.md  worklog.md
docs/feature-request/: web-control-panel.md  webhook-interaction-bridge-poc.md
docs/superpowers/: MEMO-tpp-poc-stage1.md
docs/superpowers/plans/: 2026-03-13-wisp-phase1.md  (+4 more)
docs/worklog/: 2026-W12.md  2026-W13.md
migrations/: 001_init.sql  002_multi_platform.sql  003_token_usage.sql  004_allowed_channels.sql  005_tpp_webhooks.sql  006_reminders.sql
scripts/: deploy.sh  input-tpp-creds.sh  register-tpp-commands.sh  webhook-hooks.json
src/: config.rs  error.rs  lib.rs  main.rs  scheduler.rs  tpp_poc.rs
src/assistant/: service.rs
src/db/: allowed_channels.rs  memory.rs  mod.rs  reminders.rs  token_usage.rs  tpp_webhooks.rs  users.rs
src/discord/: interaction.rs  mod.rs  verify.rs  webhook.rs
src/llm/: claude.rs  mod.rs
src/platform/: mod.rs
src/tools/: mod.rs  search.rs  time.rs  weather.rs
src/weather/: cwa.rs  mod.rs
tests/: assistant_test.rs  config_test.rs  db_memory_test.rs  db_reminders_test.rs  db_users_test.rs  discord_verify_test.rs  discord_webhook_test.rs  interaction_test.rs  line_client_test.rs  line_handler_test.rs  llm_claude_test.rs  platform_types_test.rs  tools_registry_test.rs  tools_search_test.rs  tpp_oauth_test.rs  tpp_poc_test.rs  weather_cwa_test.rs
(+10 files in other folders)
