[package]
name = "wisp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Discord
twilight-http = "0.16"
twilight-model = "0.16"
twilight-util = { version = "0.16", features = ["builder"] }
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
hex = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.13"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
axum-test = "19"
wiremock = "0.6"
rand = "0.8"
